--- a/software/web/src/scss/main.scss
+++ b/software/web/src/scss/main.scss
@@ -31,7 +31,7 @@ body {
   bottom: 0;
   left: 0;
   z-index: 100; /* Behind the navbar */
-  padding: 48px 0 0; /* Height of navbar */
+  padding: 66px 0 0; /* Height of navbar */
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, 0.1);
 }
 
@@ -42,10 +42,14 @@ body {
   }
 }
 
+.custom-alert {//TODO: don't hardcode this
+    position: fixed; top: 66; left: 0px; right: 0px; z-index: 9999;
+}
+
 .sidebar-sticky {
   position: relative;
   top: 0;
-  height: calc(100vh - 48px);
+  height: calc(100vh - 66px);
   padding-top: 0.5rem;
   overflow-x: hidden;
   overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
@@ -180,4 +184,12 @@ body {
 
 .text-prefer-nowrap {
     display: inline-block;
+}
+
+.navbar-dark .navbar-toggler-icon {
+    background: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30'%3E%3Cpath stroke='rgba(255, 255, 255, 1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+}
+
+.navbar-dark .navbar-toggler:hover {
+    background-color: #5a6268
 }
